Archive2/12/81c05535b049d1/output
main.cpp: In function 'int main()':
main.cpp:16:29: error: invalid initialization of non-const reference of type 'std::string& {aka std::basic_string<char>&}' from an rvalue of type 'std::string {aka std::basic_string<char>}'
     SomeFunc(GetSomeString());
                             ^
main.cpp:10:6: note: in passing argument 1 of 'void SomeFunc(std::string&)'
 void SomeFunc(std::string& someString)
      ^
