Archive2/12/81c05535b049d1/main.cpp
#include <iostream>
#include <string>
#include <vector>

std::string GetSomeString()
{
    return "Some string";
}

void SomeFunc(std::string& someString)
{
}

int main()
{
    SomeFunc(GetSomeString());
}
